src/style.css
/* ... */
.now-playing-album-title {
  font-weight: bold;
}
button {
  min-width: 40px !important;
}
.custom-den-controls {
  display: flex;
  flex-wrap: wrap;
  max-width: 400px;
}
.base-lms-controls {
  display: flex;
  padding: 0px 10px 0px 10px;
  max-width: 400px;
}
ons-toolbar-button.player-control-button {
  flex-grow: 1;
  padding: 2px 15px 2px 15px;
}

.custom-den-controls .player-control-button {
  margin-bottom: 0px;
}
.track-title {
  font-size: 1rem;
  text-transform: none;
  margin-right: .5rem;
}
.info-i {
  display: flex;
  text-transform: none;
  background-color: lightgray;
  width: 25px;
  height: 25px;
  border-radius: 15px;
  font-weight: 700;
  font-family: ui-serif;
  text-align: center;
  align-items: center;
  cursor: pointer;
}
.i {
  display: flex;
  text-align: center;
  width: 100%;
  padding-left: 50%;
  position: relative;
  left: -3px;
}

.player-bar {
  display: flex;
  flex-wrap: wrap;
  margin-bottom: 1.5rem;
}

.card {
  color: black;
}

.now-playing > img {
  max-width: 150px;
  float: right;
  margin-right: 20px;
  margin-bottom: 10px;
}

.now-playing .info {
  width: 100%;
  display: flex;
}
.now-playing-meta {
  white-space: normal;
  gap: 4px;
  flex-grow: 1;
  min-height: 5rem;
}
.now-playing-meta,
.control-buttons {
  display: flex;
  flex-direction: column;
}
.playing-inset > div {
  height: 100px;
  flex-basis: 20%;
}

.album-info {
  display: flex;
  margin: 0.5rem;
  justify-content: space-between;
}
.album-info .text-info {
  flex-basis: 80%;
  padding:.25rem;
}

.mini-album-cover.button {
  margin: 5px 15px 5px 15px;
  padding: 0;
}
.mini-album-cover img {
  width: auto;
  height: 80px;
}

.track-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.track-container .track-info {
  display: flex;
  flex-basis: 80%;
  flex-direction: column;
}
.track-container .tracklist-album {
  flex-grow: 1;
}

.grid-tracklist .track-details {
  margin-left: 1rem;
  margin-bottom: 1rem;
  margin-right: 1rem;
}
.track-info-controls {
  display: flex;
  align-items: center;
}
.tracklist-album {
  width: 100%;
  display: flex;
  flex-direction: column;
}
.track-container .track-info .track-title {
  font-size: 1.4em;
}
.tracklist-album {
  width: 100px;
  display: inline-block;
  float: right;
  transition: 0.2s;
}
.list-track {
  height: 100px;
  border-style: solid;
  border-color: rgb(177, 174, 174);
  margin-top: 10px;
  padding: 10px;
  border-radius: 10px;
  border-width: 2px;
  height: auto;
}
.track-list-dialog {
  z-index: 100;
}
.dialog {
  width: 80%;
  min-height: 100px;
}

.player-selector-dialog .dialog {
  height: auto !important;
}

.album-modal .dialog-container {
  box-shadow: 9px 11px 3px rgba(0, 0, 0, 0.28);
}

.album-modal .dialog {
  width: 90%;
  max-width: 700px;
  height: 90%;
}
.btn-icon {
  width: 3rem;
  stroke: #0076FF;
  cursor: pointer;
}
.btn-icon.randomize-icon {
  width: 2rem;
}
.btn-icon.download {
  height: 2rem;
} 
.selectors {
  display: flex;
  flex-direction: row;
}

.flip-container {
  width: 100%;
  height: auto;
}

.drawer-button {
  position: fixed;
  top: 30px;
  right: 30px;
  z-index: 100;
  background: white;
  opacity: 0.4;
  border: solid;
  border-width: 1px;
}

.view-and-search-selector span {
  font-size: 0.8em;
}

button.view-selector.composer-artist {
  min-width: 80px !important;
}
.composer-artist segment__button {
  line-height: 1.1em;
}
segment__button {
  border-color: rgb(232, 233, 233) !important;
  padding: 0px 5px 0px 5px;
}

.search-bar {
  position: relative;
}

.track-time {
  padding: 10px 0px 10px 0px;
  width: 80%;
}
.player-control-button {
  margin-bottom: 0px;
  padding: 2px 10px 20px 10px;
}
.now-playing {
  display: flex;
  gap: 1rem;
  font-size: .8rem;
}
.now-playing-album-cover {
  min-width: 100px;
  max-width: 100%;
  position: relative;
  width: 12rem;
}

.library-view {
  z-index: 100;
}
.now-playing > img {
  max-width: 25%;
  float: right;
  margin-right: 4px;
}
.slider-volume {
  display: flex;
  flex-direction: column;
  min-width: 200px;
  justify-content: center;
}
.slider-volume ons-range {
  width: 100%;
}

.track-range .timings {
  display: flex;
  justify-content: space-between;
}
.loading-text {
  font-size: 5em;
}
.tracklist-album {
  width: 80px;
}

.tracklist-artist {
  font-weight: 800;
}
.tracklist-album-title {
  font-style: italic;
}
ons-range.track-time {
  width: 100%;
}
ons-button.show-controlbar {
  position: fixed;
  bottom: 10px;
  width: 5%;
  right: 5%;
  z-index: 500;
  opacity: 0.5;
  border: solid;
  border-color: #c0bac3;
  border-width: 0.5px;
  border-radius: 6px;
  background-color: white !important;
}
.button--large--cta {
  background-color: transparent !important;
}
.button--large--cta:active {
  background-color: transparent !important;
  opacity: 0.8 !important;
}
.toolbar-activation-zone {
  height: 100px;
  width: 100%;
  z-index: 500;
  position: fixed;
  bottom: 0;
}

.grid-size {
  display: flex;
  flex-direction: column;

  justify-content: center;
  position: sticky;
  z-index: 100;
  width: 200px;
}
.grid-size input,
.slider-volume input,
.track-time input {
  opacity: 0.5;
}
.grid-size ons-range {
  width: 200px;
}

.disc-number {
  font-size: 18px;
  margin-bottom: 15px;
}
.disc-number-text {
  margin-left: 10px;
}

.track-info {
  overflow-wrap: anywhere;
  max-width: 100%;
}

/* 
   Dark Theme 
*/

.dark-theme .dialog .list-item {
  background-color: black;
  color: white;
}

.dark-theme .album-text-info {
  color: white;
}
.dark-theme .list-item:hover {
  background-color: #a39191;
}

.dark-theme .search-bar input {
  background-color: #272727;
  color: white;
}
.dark-theme .page__background {
  background-color: black;
}
.dark-theme .toolbar {
  color: #a39191;;
}
.dark-theme img.album-image {
  width: 98%;
  max-width: 100%;
  border-width: 2px;
  border-radius: 2px;
}

.album-image-modal {
  height: 100vh;
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
}
/* ... */

